# react-arch-analyzer-extension

./: .gitignore  README.md  package-lock.json  package.json
backend/: README.md  main.py  pyproject.toml  requirements.txt
backend/models/: AnalysisRun.py  CodeComponent.py  ComponentRelation.py  User.py  __init__.py
backend/routes/: analysis.py  auth.py  github_auth.py
backend/schemas/: analysis.py  auth.py
backend/services/: analysis_service.py
backend/utils/: auth.py  serializers.py
extension/: README.md  extension.js  package-lock.json  package.json  react-arch-analyzer-extension-0.1.0.vsix  react-arch-analyzer-extension-0.2.0.vsix  react-arch-analyzer-extension-0.2.1.vsix  react-arch-analyzer-extension-0.2.2.vsix  react-arch-analyzer-extension-0.2.3.vsix  react-arch-analyzer-extension-0.2.4.vsix  react-arch-analyzer-extension-3.0.0.vsix  react-arch-analyzer-extension-3.0.1.vsix  react-arch-analyzer-extension-3.0.2.vsix
extension/media/: sidebar.css  sidebar.html  sidebar.js
extension/src/: api.js  scanner.js  sidebarProvider.js
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/components/Common/: NotAuthenticated.css  ProtectedRoute.jsx
frontend/src/components/ProjectGraph/: ArchitectureGraph.css  NodeCard.jsx  index.jsx
frontend/src/context/: AuthContext.jsx  ProjectsContext.jsx  PropsContext.jsx
frontend/src/hooks/: usePropsActions.js
frontend/src/utils/: api.js  dataFlowUtils.js  graphUtils.js  localStorageUtils.js  projectDataHelper.js  propsReducer.js  treeHelpers.js
(+4 files in other folders)
