[project]
name = "react-arch-analyzer-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "beanie",
    "motor",
    "pydantic-settings",
    "certifi",
    "pydantic[email]>=2.13.4",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.28.1",
]
